fix(a11y): improve link contrast in blog content (RGAA 3.3/1.4.3)
- Change blog content link color from #3bcce5 to #0b7b8c (4.6:1 ratio)
- Add text-decoration: underline to links for non-color identification
- Update #author CSS selector to match div instead of section

--- a/src/css/_blog.scss
+++ b/src/css/_blog.scss
@@ -192,11 +192,12 @@ section#blog {
       .content {
         letter-spacing: initial;
         a {
-          color: variables.$lightblue;
+          color: #0b7b8c;
           word-wrap: break-word;
+          text-decoration: underline;
 
           &:hover {
-            color: color.adjust(variables.$lightblue, $lightness: -10%);
+            color: color.adjust(#0b7b8c, $lightness: -10%);
           }
         }
         margin: 0.5rem;
@@ -257,7 +258,7 @@ section#blog {
           flex: 1;
         }
 
-        section#author {
+        #author {
           text-align: right;
           align-self: center;
           flex: 0.5;
